feat: use biome

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,22 @@
 {
-  "extends": "@mkvlrn/config/tsconfig-node",
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "rootDir": "./",
-    "baseUrl": "./",
-    "paths": { "~/*": ["./src/*"], "#/*": ["./test/*"] }
+    "allowJs": true,
+    "customConditions": ["development"],
+    "declaration": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "isolatedModules": true,
+    "lib": ["Dom", "DOM.Iterable", "ESNext", "ESNext.Decorators"],
+    "module": "NodeNext",
+    "moduleDetection": "force",
+    "moduleResolution": "nodenext",
+    "noEmit": true,
+    "preserveSymlinks": true,
+    "removeComments": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "esnext"
   }
 }
