--- a/package.json
+++ b/package.json
@@ -10,37 +10,36 @@
     "type": "git",
     "url": "git@github.com:mkvlrn/template-node"
   },
-  "keywords": [
-    "node",
-    "esm",
-    "template"
-  ],
+  "keywords": ["node", "esm", "template"],
+  "imports": {
+    "#*": {
+      "development": "./src/*",
+      "default": "./dist/*"
+    }
+  },
   "scripts": {
     "build": "node --import @swc-node/register/esm-register scripts/build.ts",
     "dev": "node --import @swc-node/register/esm-register --watch src/main.ts",
     "start": "node dist/main.js",
-    "test": "vitest --run",
-    "test:cov": "vitest run --coverage",
+    "test": "vitest run --reporter verbose",
+    "test:cov": "npm run test -- --coverage",
     "lint": "eslint --fix src/**/*.ts test/**/*.ts",
     "format": "prettier --write src test",
     "typecheck": "tsc --noEmit",
     "prepare": "husky"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.6.0",
+    "@biomejs/biome": "^1.9.4",
+    "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@mkvlrn/config": "^1.0.6",
     "@swc-node/register": "^1.10.9",
-    "@swc/core": "^1.9.3",
-    "@types/node": "^22.10.1",
-    "@vitest/coverage-v8": "^2.1.6",
-    "eslint": "^9.15.0",
+    "@swc/core": "^1.10.4",
+    "@types/node": "^22.10.2",
+    "@vitest/coverage-v8": "^2.1.8",
     "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.4.1",
-    "tsc-alias": "^1.8.10",
+    "lint-staged": "^15.3.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2",
-    "vite-tsconfig-paths": "^5.1.3",
-    "vitest": "^2.1.6"
+    "vitest": "^2.1.8"
   }
 }
