--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "@types/node": "^22.10.2",
     "@vitest/coverage-v8": "^2.1.8",
     "husky": "^9.1.7",
-    "lint-staged": "^15.3.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
+  },
+  "commitlint": {
+    "extends": ["@commitlint/config-conventional"]
   }
 }
