--- a/package.json
+++ b/package.json
@@ -14,26 +14,24 @@
   "imports": {
     "#*": {
       "development": "./src/*",
-      "default": "./dist/*"
+      "default": "./build/*"
     }
   },
   "scripts": {
-    "build": "node --import @swc-node/register/esm-register scripts/build.ts",
-    "dev": "node --import @swc-node/register/esm-register --watch src/main.ts",
-    "start": "node dist/main.js",
-    "test": "vitest run --reporter verbose",
-    "test:cov": "npm run test -- --coverage",
-    "lint": "eslint --fix src/**/*.ts test/**/*.ts",
-    "format": "prettier --write src test",
-    "typecheck": "tsc --noEmit",
+    "prebuild": "rm -rf build",
+    "build": "npx tsc -p tsconfig.build.json",
+    "dev": "node --conditions development --import tsx --watch src/main.ts",
+    "start": "node build/main.js",
+    "test": "node --import tsx scripts/test.ts",
+    "test:cov": "node --import tsx scripts/test.ts --coverage",
+    "tidy": "npx @biomejs/biome check --write scripts src test",
+    "typecheck": "npx tsc --noEmit",
     "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@swc-node/register": "^1.10.9",
-    "@swc/core": "^1.10.4",
     "@types/node": "^22.10.2",
     "@vitest/coverage-v8": "^2.1.8",
     "husky": "^9.1.7",
