--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "keywords": ["node", "typescript", "esm", "template"],
   "scripts": {
     "swc": "node --import @swc-node/register/esm-register",
-    "build": "npm run swc -- scripts/build.ts",
+    "prebuild": "rm -rf build",
+    "build": "npx swc src -d ./build --strip-leading-paths",
     "dev": "npm run swc -- --watch src/main.ts",
     "start": "node build/main.js",
     "test": "npm run swc -- scripts/test.ts",
@@ -27,6 +28,7 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@swc-node/register": "^1.10.9",
+    "@swc/cli": "^0.5.2",
     "@swc/core": "^1.10.4",
     "@types/node": "^22.10.3",
     "@vitest/coverage-v8": "^2.1.8",
