--- a/biome.jsonc
+++ b/biome.jsonc
@@ -7,15 +7,7 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "include": [
-      "**/*.ts",
-      "**/*.tsx",
-      "**/*.js",
-      "**/*.jsx",
-      "**/*.json",
-      "**/*.jsonc",
-      "**/*.css"
-    ],
+    "include": ["**/*"],
     "ignore": []
   },
   "formatter": {
