--- a/.swcrc
+++ b/.swcrc
@@ -2,7 +2,7 @@
   "$schema": "https://swc.rs/schema.json",
   "jsc": {
     "baseUrl": ".",
-    "paths": { "~/*": ["./*"], "🧪/*": ["./test"] },
+    "paths": { "~/*": ["./src/*"], "🧪/*": ["./test/*"] },
     "minify": { "format": { "comments": false } },
     "parser": {
       "syntax": "typescript",
