--- a/.swcrc
+++ b/.swcrc
@@ -2,7 +2,7 @@
   "$schema": "https://swc.rs/schema.json",
   "jsc": {
     "baseUrl": ".",
-    "paths": { "~/*": ["./src/*"], "🧪/*": ["./test/*"] },
+    "paths": { "~/*": ["./src/*"] },
     "minify": { "format": { "comments": false } },
     "parser": {
       "syntax": "typescript",
@@ -12,5 +12,6 @@
     "target": "esnext",
     "transform": { "decoratorMetadata": true }
   },
-  "module": { "type": "es6", "strict": true }
+  "module": { "type": "es6", "strict": true },
+  "exclude": [".test.ts", ".test.tsx"]
 }
