--- a/package.json
+++ b/package.json
@@ -13,28 +13,29 @@
   "keywords": ["node", "typescript", "esm", "template"],
   "scripts": {
     "prebuild": "rm -rf build",
-    "build": "npx swc src -d ./build --strip-leading-paths",
-    "postbuild": "npx tsc-alias -f",
+    "build": "swc src -d ./build --strip-leading-paths",
+    "postbuild": "tsc-alias -f",
     "dev": "node --import @swc-node/register/esm-register --watch src/main.ts",
-    "prestart": "npm run build",
     "start": "node build/main.js",
-    "test": "npx vitest run",
-    "tidy": "npx biome check --write --no-errors-on-unmatched",
-    "typecheck": "npx tsc --noEmit",
-    "prepare": "npx husky"
+    "test": "vitest",
+    "test:integration": "vitest",
+    "test:e2e": "vitest",
+    "tidy": "biome check --write --no-errors-on-unmatched",
+    "typecheck": "tsc --noEmit",
+    "prepare": " husky"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@swc-node/register": "^1.10.9",
-    "@swc/cli": "^0.5.2",
-    "@swc/core": "^1.10.6",
+    "@swc/cli": "^0.6.0",
+    "@swc/core": "^1.10.7",
     "@types/node": "^22.10.5",
     "@vitest/coverage-v8": "^2.1.8",
     "husky": "^9.1.7",
     "tsc-alias": "^1.8.10",
-    "typescript": "^5.7.2",
+    "typescript": "^5.7.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^2.1.8"
   }
