--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,38 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    // always strict
-    // if you use "any" you'll be sent to the gulag
-    "strict": true,
+    // the stricter, the better
+    // https://whatislove.dev/articles/the-strictest-typescript-config/
+    "allowJs": false,
+    "exactOptionalPropertyTypes": true,
+    "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
+    "strict": true,
 
     // esm
+    "isolatedModules": true,
+    "lib": ["Dom", "DOM.Iterable", "ESNext", "ESNext.Decorators"],
     "module": "ESNext",
     "target": "esnext",
-    "lib": ["Dom", "DOM.Iterable", "ESNext", "ESNext.Decorators"],
 
     // not using tsc to compile
     // follow esm conventions
-    "allowJs": false,
-    "isolatedModules": true,
+    // tsc-alias needs outDir to be set
     "moduleDetection": "force",
     "moduleResolution": "bundler",
     "noEmit": true,
+    "outDir": "./build",
 
     // paths for imports
+    // a separate alias for each test type is useful when importing mocks and such
+    // 🧪 is neat, don't be a hater
     "baseUrl": ".",
-    "paths": { "~/*": ["./src/*"], "🧪/*": ["./test/*"] },
+    "paths": {
+      "~/*": ["./src/*"],
+      "🧪/*": ["./test/*"],
+      "🧪-integration/*": ["./test-integration/*"],
+      "🧪-e2e/*": ["./test-e2e/*"]
+    },
     "rootDir": ".",
 
     // pnpm compatibility
@@ -30,10 +41,10 @@
     // importing json happens more often than you think
     "resolveJsonModule": true,
 
-    // the weird typescript decorators that should already be
+    // the weird typescript decorators that should have been
     // replaced by the tc39 proposal, but tc39 is S.L.O.W.
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
 
   "exclude": ["node_modules", "build", "coverage", "dist"]
