--- a/biome.jsonc
+++ b/biome.jsonc
@@ -25,6 +25,10 @@
       "complexity": {
         // this goes against typescript's noPropertyAccessFromIndexSignature
         "useLiteralKeys": "off"
+      },
+      "correctness": {
+        // node test runner
+        "noNodejsModules": "off"
       }
     }
   }
