--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "keywords": ["node", "typescript", "esm", "template"],
   "scripts": {
     "prebuild": "rm -rf build",
-    "build": "swc src -d ./build --strip-leading-paths",
-    "postbuild": "tsc-alias -f",
-    "dev": "node --import @swc-node/register/esm-register --watch src/main.ts",
+    "build": "tsc -p tsconfig.build.json",
+    "postbuild": "tsc-alias -f -p tsconfig.build.json",
+    "dev": "node --import=tsx --watch src/main.ts",
     "start": "node build/main.js",
-    "test": "vitest",
-    "test:integration": "vitest",
-    "test:e2e": "vitest",
+    "test": "node --import=tsx --test src/**/*.test.ts",
+    "test:integration": "node --import=tsx --test test/integration/**/*.test.ts",
+    "test:e2e": "node --import=tsx --test test/e2e/**/*.test.ts",
     "tidy": "biome check --fix --no-errors-on-unmatched",
     "prepare": " husky"
   },
@@ -27,15 +27,10 @@
     "@biomejs/biome": "^1.9.4",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@swc-node/register": "^1.10.9",
-    "@swc/cli": "^0.6.0",
-    "@swc/core": "^1.10.7",
     "@types/node": "^22.10.5",
-    "@vitest/coverage-v8": "^2.1.8",
     "husky": "^9.1.7",
     "tsc-alias": "^1.8.10",
-    "typescript": "^5.7.3",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^2.1.8"
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   }
 }
