chore: simplify this base template to the max (min!)

--- a/.vscode/settings-example.json
+++ b/.vscode/settings-example.json
@@ -11,6 +11,9 @@
     "source.fixAll": "never",
     "source.organizeImports.biome": "never"
   },
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "editor.formatOnType": true,
   "eslint.enable": false,
   "nodejs-testing.extensions": [
     {
