--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,35 +1,31 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "vcs": {
-    "enabled": true,
-    "clientKind": "git",
-    "useIgnoreFile": true
-  },
-  "files": {
-    "ignoreUnknown": true,
-    "include": ["**/*"],
-    "ignore": []
-  },
+  "vcs": { "enabled": true, "clientKind": "git", "useIgnoreFile": true },
+  "files": { "ignoreUnknown": true, "include": ["**/*"], "ignore": [] },
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
     "formatWithErrors": true
   },
-  "organizeImports": {
-    "enabled": false
-  },
+  "organizeImports": { "enabled": false },
   "linter": {
     "enabled": true,
     "rules": {
       "all": true,
-      "complexity": {
-        // this goes against typescript's noPropertyAccessFromIndexSignature
-        "useLiteralKeys": "off"
-      },
-      "correctness": {
-        // node test runner
-        "noNodejsModules": "off"
-      }
+      // this goes against typescript's noPropertyAccessFromIndexSignature
+      "complexity": { "useLiteralKeys": "off" }
     }
-  }
+  },
+  "overrides": [
+    {
+      // node test runner
+      "include": ["**/*.test.ts"],
+      "linter": { "rules": { "correctness": { "noNodejsModules": "off" } } }
+    },
+    {
+      // react
+      "include": ["**/*.tsx"],
+      "linter": { "rules": { "suspicious": { "noReactSpecificProps": "off" } } }
+    }
+  ]
 }
