--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
+    // no emit by default, build config enables it
+    "noEmit": true,
+
+    // remove comments from output
+    "removeComments": true,
+
     // the stricter, the better
     // https://whatislove.dev/articles/the-strictest-typescript-config/
     "allowJs": false,
@@ -15,24 +21,16 @@
     "module": "ESNext",
     "target": "esnext",
 
-    // not using tsc to compile
     // follow esm conventions
     // tsc-alias needs outDir to be set
     "moduleDetection": "force",
     "moduleResolution": "bundler",
-    "noEmit": true,
     "outDir": "./build",
 
     // paths for imports
-    // a separate alias for each test type is useful when importing mocks and such
     // 🧪 is neat, don't be a hater
     "baseUrl": ".",
-    "paths": {
-      "~/*": ["./src/*"],
-      "🧪/*": ["./test/*"],
-      "🧪-integration/*": ["./test-integration/*"],
-      "🧪-e2e/*": ["./test-e2e/*"]
-    },
+    "paths": { "~/*": ["./src/*"], "🧪/*": ["./test/*"] },
     "rootDir": ".",
 
     // pnpm compatibility
