refactor: back to vitest, node test runner isn't battle tested enough

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
     "biomejs.biome",
-    "connor4312.nodejs-testing",
-    "ms-vscode.test-adapter-converter"
+    "ms-vscode.test-adapter-converter",
+    "vitest.explorer"
   ]
 }
