--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "postbuild": "tsc-alias -f -p tsconfig.build.json",
     "dev": "node --import=tsx --watch src/main.ts",
     "start": "node build/main.js",
-    "test": "node --import=tsx --test src/**/*.test.ts",
+    "test": "vitest",
     "tidy": "biome check --fix --no-errors-on-unmatched",
     "prepare": "husky"
   },
@@ -26,9 +26,12 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@types/node": "^22.10.5",
+    "@vitest/coverage-v8": "^2.1.8",
     "husky": "^9.1.7",
     "tsc-alias": "^1.8.10",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   }
 }
