--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,12 @@
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
     "strict": true,
+    "strictNullChecks": true,
 
     // esm
+    "esModuleInterop": true,
     "isolatedModules": true,
-    "lib": ["Dom", "DOM.Iterable", "ESNext", "ESNext.Decorators"],
+    "lib": ["ESNext"],
     "module": "ESNext",
     "target": "esnext",
 
@@ -35,18 +37,12 @@
 
     // pnpm compatibility
     "preserveSymlinks": true,
-    "typeRoots": ["./node_modules/@types"],
 
     // importing json happens more often than you think
     "resolveJsonModule": true,
 
     // don't try to check for errors on imported libs
-    "skipLibCheck": true,
-
-    // the weird typescript decorators that should have been
-    // replaced by the tc39 proposal, but tc39 is S.L.O.W.
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "skipLibCheck": true
   },
 
   "exclude": ["node_modules", "build", "coverage", "dist"]
