--- a/.vscode/settings-example.json
+++ b/.vscode/settings-example.json
@@ -2,9 +2,7 @@
   "[css][jsonc][json][javascript][javascriptreact][typescript][typescriptreact]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
-  "[markdown][html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
+  "[markdown][html]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
   "biome.enabled": true,
   "editor.codeActionsOnSave": {
     "quickfix.biome": "explicit",
@@ -13,5 +11,6 @@
   },
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
-  "editor.formatOnType": true
+  "editor.formatOnType": true,
+  "eslint.enable": false
 }
