--- a/biome.jsonc
+++ b/biome.jsonc
@@ -13,20 +13,17 @@
     "enabled": true,
     "rules": {
       "all": true,
-      // this goes against typescript's noPropertyAccessFromIndexSignature
-      "complexity": { "useLiteralKeys": "off" }
+      "complexity": {
+        // this goes against typescript's noPropertyAccessFromIndexSignature
+        "useLiteralKeys": "off"
+      }
     }
   },
   "overrides": [
     {
       // some/most config files on root export defaults from them
-      "include": ["./*.config.ts", "./*.config.js"],
+      "include": ["*.config.ts", "*.config.js"],
       "linter": { "rules": { "style": { "noDefaultExport": "off" } } }
-    },
-    {
-      // node test runner
-      "include": ["**/*.test.ts"],
-      "linter": { "rules": { "correctness": { "noNodejsModules": "off" } } }
     },
     {
       // react
