--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dev": "node --import=tsx --watch src/main.ts",
     "start": "node build/main.js",
     "test": "vitest",
+    "test:integration": "vitest --config test/integration/vitest.config.ts",
+    "test:e2e": "vitest --config test/e2e/vitest.config.ts",
     "tidy": "biome check --fix --no-errors-on-unmatched --verbose",
     "typecheck": "tsc --noEmit && echo 'tsc passed'",
     "prepare": "husky"
