--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:integration": "vitest --config test/integration/vitest.config.ts",
     "test:e2e": "vitest --config test/e2e/vitest.config.ts",
     "tidy:ci": "biome check --no-errors-on-unmatched",
-    "tidy": "yarn tidy:ci --fix --verbose",
+    "tidy": "yarn tidy:ci --fix",
     "typecheck": "tsc --noEmit",
     "prepare": "husky"
   },
