--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -21,4 +21,4 @@ jobs:
       - run: |
           yarn typecheck
           yarn tidy:ci
-          yarn test --run --bail=1 --reporter=default
+          yarn test:ci
