--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postbuild": "tsc-alias -f -p tsconfig.build.json",
     "dev": "node --import=tsx --watch src/main.ts",
     "start": "node build/main.js",
+    "test:ci": "yarn test --run --bail=1 --reporter=default && yarn test:e2e --run --bail=1 --reporter=default",
     "test": "vitest",
     "test:e2e": "vitest --config test/e2e/vitest.config.ts",
     "tidy:ci": "biome check --no-errors-on-unmatched",
