--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "node build/main.js",
     "test:ci": "yarn test --run --bail=1 --reporter=default && yarn test:e2e --run --bail=1 --reporter=default",
     "test": "vitest",
-    "test:e2e": "vitest --config test/e2e/vitest.config.ts",
+    "test:e2e": "vitest --config e2e/vitest.config.ts",
     "tidy:ci": "biome check --no-errors-on-unmatched",
     "tidy": "yarn tidy:ci --fix",
     "typecheck": "tsc --noEmit",
