--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
   },
   "keywords": ["node", "typescript", "esm", "template"],
   "scripts": {
-    "prebuild": "rm -rf build",
-    "build": "tsc -p tsconfig.build.json",
-    "postbuild": "tsc-alias -f -p tsconfig.build.json",
-    "dev": "node --import=tsx --watch src/main.ts",
+    "build": "tsup",
     "start": "node build/main.js",
-    "test:ci": "yarn test --run --bail=1 --reporter=default && yarn test:e2e --run --bail=1 --reporter=default",
+    "test:ci": "yarn test --bail=1 --reporter=default && yarn test:e2e --bail=1 --reporter=default",
     "test": "vitest",
     "test:e2e": "vitest --config e2e/vitest.config.ts",
     "tidy:ci": "biome check --no-errors-on-unmatched",
@@ -33,6 +30,7 @@
     "@vitest/coverage-v8": "^3.0.4",
     "husky": "^9.1.7",
     "tsc-alias": "^1.8.10",
+    "tsup": "^8.3.6",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "vite-tsconfig-paths": "^5.1.4",
