--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "keywords": ["node", "typescript", "esm", "template"],
   "scripts": {
+    "prebuild": "rm -rf build",
     "build": "tsup",
     "start": "node build/main.js",
     "test:ci": "yarn test --bail=1 --reporter=default && yarn test:e2e --bail=1 --reporter=default",
@@ -29,7 +30,6 @@
     "@types/node": "^22.10.10",
     "@vitest/coverage-v8": "^3.0.4",
     "husky": "^9.1.7",
-    "tsc-alias": "^1.8.10",
     "tsup": "^8.3.6",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
