--- a/package.json
+++ b/package.json
@@ -41,7 +41,5 @@
     "typescript": "^5.7.3",
     "vitest": "^3.0.4"
   },
-  "dependencies": {
-    "zod": "^3.24.1"
-  }
+  "dependencies": {}
 }
