--- a/tsup.config.json
+++ b/tsup.config.json
@@ -6,10 +6,11 @@
   "target": "esnext",
   "platform": "node",
   "bundle": true,
-  "dts": false,
   "sourcemap": true,
+  "dts": false,
   "splitting": false,
   "cjsInterop": false,
   "minify": false,
+  "external": [],
   "noExternal": []
 }
