--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": ["node", "typescript", "esm", "template"],
   "engines": {
-    "node": ">=23.6.0"
+    "node": ">=22.6"
   },
   "imports": {
     "#*": "./src/*"
@@ -20,7 +20,7 @@
   "scripts": {
     "prebuild": "rm -rf build",
     "build": "tsup",
-    "dev": "node --watch src/main.ts",
+    "dev": "node --experimental-strip-types --watch src/main.ts",
     "start": "node build/main.js",
     "test:ci": "yarn test --bail=1 --reporter=default && yarn test:e2e --bail=1 --reporter=default",
     "test": "vitest",
@@ -32,14 +32,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@types/node": "^22.12.0",
-    "@vitest/coverage-v8": "^3.0.4",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "@types/node": "^22.13.1",
+    "@vitest/coverage-v8": "^3.0.5",
     "husky": "^9.1.7",
     "tsup": "^8.3.6",
     "typescript": "^5.7.3",
-    "vitest": "^3.0.4"
+    "vitest": "^3.0.5"
   },
   "dependencies": {}
 }
