--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": ["node", "typescript", "esm", "template"],
   "engines": {
-    "node": ">=22.6"
+    "node": ">=23.6"
   },
   "imports": {
     "#*": "./src/*"
@@ -20,7 +20,7 @@
   "scripts": {
     "prebuild": "rm -rf build",
     "build": "tsup",
-    "dev": "node --experimental-strip-types --watch src/main.ts",
+    "dev": "node --watch src/main.ts",
     "start": "node build/main.js",
     "test:ci": "yarn test --bail=1 --reporter=default && yarn test:e2e --bail=1 --reporter=default",
     "test": "vitest",
@@ -32,14 +32,16 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@commitlint/cli": "^19.7.1",
-    "@commitlint/config-conventional": "^19.7.1",
-    "@types/node": "^22.13.4",
-    "@vitest/coverage-v8": "^3.0.5",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@types/node": "^22.13.14",
+    "@vitest/coverage-v8": "^3.0.9",
     "husky": "^9.1.7",
-    "tsup": "^8.3.6",
-    "typescript": "^5.7.3",
-    "vitest": "^3.0.5"
+    "tsup": "^8.4.0",
+    "typescript": "^5.8.2",
+    "vitest": "^3.0.9"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@mkvlrn/result": "npm:@jsr/mkvlrn__result@^0.1.2"
+  }
 }
