feat: remove tsup and vitest in favor of tsc and node test runner

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -40,6 +40,17 @@
           }
         }
       }
+    },
+    {
+      // test files can use node:modules
+      "include": ["**/*.test.ts", "**/*.test.js"],
+      "linter": {
+        "rules": {
+          "correctness": {
+            "noNodejsModules": "off"
+          }
+        }
+      }
     }
   ]
 }
