feat: keeping updated

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,38 +1,73 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "node_modules/@biomejs/biome/configuration_schema.json",
   "vcs": {
-    "enabled": true,
     "clientKind": "git",
+    "enabled": true,
     "useIgnoreFile": true
   },
   "files": {
     "ignoreUnknown": true,
-    "include": ["**/*"],
-    "ignore": []
+    "includes": ["**/*", "!build/**", "!node_modules/**", "!dist/**", "!coverage/**"]
+  },
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on",
+        "useSortedAttributes": "on",
+        "useSortedKeys": "on",
+        "useSortedProperties": "on"
+      }
+    }
   },
   "formatter": {
     "enabled": true,
     "formatWithErrors": true,
-    "indentStyle": "space",
-    "lineWidth": 100
-  },
-  "organizeImports": {
-    "enabled": false
+    "lineWidth": 100,
+    "useEditorconfig": true
   },
   "linter": {
+    "domains": {
+      "test": "all"
+    },
     "enabled": true,
     "rules": {
-      "all": true,
-      "complexity": {
-        // this goes against typescript's noPropertyAccessFromIndexSignature
-        "useLiteralKeys": "off"
-      }
+      "a11y": "on",
+      "complexity": "on",
+      "correctness": "on",
+      "nursery": "on",
+      "performance": "on",
+      "security": "on",
+      "style": "on",
+      "suspicious": "on"
     }
   },
   "overrides": [
     {
+      "includes": ["**/biome.json", "**/biome.jsonc", "**/package.json", "**/tsconfig.json"],
+      "assist": {
+        "actions": {
+          "source": {
+            "useSortedKeys": "off"
+          }
+        }
+      }
+    },
+    {
+      // main.ts can console stuff out
+      "includes": ["src/main.ts"],
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noConsole": {
+              "level": "off"
+            }
+          }
+        }
+      }
+    },
+    {
       // some/most config files on root export defaults from them
-      "include": ["*.config.ts", "*.config.js"],
+      "includes": ["**/*.config.ts"],
       "linter": {
         "rules": {
           "style": {
@@ -42,8 +77,8 @@
       }
     },
     {
-      // test files can use node:modules
-      "include": ["**/*.test.ts", "**/*.test.js"],
+      // test files and scripts can use node:modules
+      "includes": ["src/**/*.test.ts", "scripts/*.ts"],
       "linter": {
         "rules": {
           "correctness": {
