--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -20,5 +20,5 @@ jobs:
       - run: yarn install
       - run: |
           yarn typecheck
-          yarn tidy-check
+          yarn biome-check
           yarn test
