--- a/.vscode/settings-example.json
+++ b/.vscode/settings-example.json
@@ -2,15 +2,13 @@
   "[css][jsonc][json][javascript][javascriptreact][typescript][typescriptreact]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
-  "[markdown][html]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
   "biome.enabled": true,
   "editor.codeActionsOnSave": {
-    "quickfix.biome": "explicit",
+    "source.biome": "explicit",
     "source.fixAll": "never",
-    "source.organizeImports.biome": "never"
+    "source.fixAll.sortJSON": "never",
+    "source.organizeImports": "never",
+    "source.sortImports": "never"
   },
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
-  "editor.formatOnType": true,
   "eslint.enable": false
 }
