--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
   "devDependencies": {
     "@biomejs/biome": "https://pkg.pr.new/biomejs/biome/@biomejs/biome@241a440",
     "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
-    "@types/node": "^22.13.17",
+    "@mkvlrn/config": "^2.0.3",
+    "@types/node": "^22.14.0",
     "husky": "^9.1.7",
     "tsup": "^8.4.0",
     "typescript": "^5.8.2"
