--- a/.vscode/settings-example.json
+++ b/.vscode/settings-example.json
@@ -4,7 +4,8 @@
   },
   "biome.enabled": true,
   "editor.codeActionsOnSave": {
-    "source.biome": "explicit",
+    "source.fixAll.biome": "explicit",
+    "source.organizeImports.biome": "explicit",
     "source.fixAll": "never",
     "source.fixAll.sortJSON": "never",
     "source.organizeImports": "never",
