--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "template"
   ],
   "engines": {
-    "node": ">=23.8"
+    "node": "24.x"
   },
   "scripts": {
     "build": "tsx scripts/build.ts",
@@ -30,9 +30,9 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@biomejs/biome": "https://pkg.pr.new/biomejs/biome/@biomejs/biome@5f890fb",
+    "@biomejs/biome": "^2.0.0-beta.3",
     "@commitlint/cli": "^19.8.1",
-    "@mkvlrn/config": "^2.0.6",
+    "@commitlint/config-conventional": "^19.8.1",
     "@types/node": "^22.15.17",
     "husky": "^9.1.7",
     "tsc-alias": "^1.8.16",
@@ -41,6 +41,6 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@mkvlrn/result": "^1.1.0"
+    "@mkvlrn/result": "^1.1.4"
   }
 }
