refactor: npm instead of yarn, vite instead of tsup

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -16,9 +16,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ">=23.6.0"
-          cache: "yarn"
-      - run: yarn install
+          cache: "npm"
+      - run: npm ci
       - run: |
-          yarn typecheck
-          yarn biome-check
-          yarn test
+          npm run typecheck
+          npm run biome-check
+          npm run test
