--- a/package.json
+++ b/package.json
@@ -20,25 +20,24 @@
     "node": "24.x"
   },
   "scripts": {
-    "build": "tsx scripts/build.ts",
+    "build": "vite build",
     "dev": "tsx --watch src/main.ts",
     "start": "node build/main.js",
     "test": "tsx --test",
     "biome-check": "biome check --no-errors-on-unmatched",
-    "biome-fix": "yarn biome-check --write",
+    "biome-fix": "npm run biome-check --write",
     "typecheck": "tsc --noEmit",
     "prepare": "husky"
   },
   "devDependencies": {
-    "@biomejs/biome": "https://pkg.pr.new/biomejs/biome/@biomejs/biome@3e8fbee",
+    "@biomejs/biome": "^2.0.0",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@types/node": "^22.15.19",
+    "@types/node": "^24.0.3",
     "husky": "^9.1.7",
-    "tsc-alias": "^1.8.16",
-    "tsup": "^8.5.0",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5"
   },
   "dependencies": {
     "@mkvlrn/result": "^1.1.4"
