--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@types/node": "^24.0.3",
     "husky": "^9.1.7",
+    "rollup-plugin-node-externals": "^8.0.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
