--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "rollup-plugin-node-externals": "^8.0.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
     "@mkvlrn/result": "^1.1.4"
