--- a/biome.jsonc
+++ b/biome.jsonc
@@ -66,7 +66,7 @@
     {
       // test files, config files, and some scripts
       // export defaults from them, and also import from node
-      "includes": ["**/*.config.ts", "**/*.test.ts", "**/*.spec.ts", "**/scripts/**"],
+      "includes": ["**/*.config.ts", "**/*.test.ts", "**/*.spec.ts", "**/.vite/**"],
       "linter": {
         "rules": {
           "correctness": {
