--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "vite build",
     "dev": "tsx --watch src/main.ts",
     "start": "node build/main.js",
-    "test": "tsx --test",
+    "test": "vitest",
     "biome-check": "biome check --no-errors-on-unmatched",
     "biome-fix": "npm run biome-check --write",
     "typecheck": "tsc --noEmit",
@@ -39,7 +39,8 @@
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@mkvlrn/result": "^1.1.4"
