--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "tsx --watch src/main.ts",
-    "start": "node build/main.js",
+    "start": "node build/template-node.js",
     "test": "vitest",
     "biome-check": "biome check --no-errors-on-unmatched",
     "biome-fix": "npm run biome-check --write",
@@ -30,10 +30,10 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.0.5",
+    "@biomejs/biome": "^2.0.6",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@types/node": "^24.0.4",
+    "@types/node": "^24.0.6",
     "husky": "^9.1.7",
     "rollup-plugin-node-externals": "^8.0.1",
     "tsx": "^4.20.3",
