--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "tsx --watch src/main.ts",
-    "start": "node build/template-node.js",
+    "start": "node build/bundle.js",
     "test": "vitest",
     "biome-check": "biome check --no-errors-on-unmatched",
     "biome-fix": "npm run biome-check --write",
