chore: bump deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "noUncheckedIndexedAccess": true,
     "strict": true,
     "strictNullChecks": true,
+    "noUncheckedSideEffectImports": true,
 
     // esm, the node way
     "esModuleInterop": true,
