chore: use bundler mode for ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,12 @@
   "compilerOptions": {
     // no transpiling
     "noEmit": true,
-    "allowImportingTsExtensions": true,
 
     // no funny business
     "erasableSyntaxOnly": true,
     "verbatimModuleSyntax": true,
 
-    // hella strict
+    // very strict
     // https://whatislove.dev/articles/the-strictest-typescript-config/
     "allowJs": false,
     "exactOptionalPropertyTypes": true,
@@ -18,12 +17,12 @@
     "strictNullChecks": true,
     "noUncheckedSideEffectImports": true,
 
-    // esm, the node way
+    // esm
     "esModuleInterop": true,
     "isolatedModules": true,
     "lib": ["ESNext"],
-    "module": "NodeNext",
-    "moduleResolution": "nodenext",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "target": "esnext",
 
     // pnpm compatibility
