--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@biomejs/biome": "^2.1.3",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@mkvlrn/config": "^2.0.10",
     "@types/node": "^24.1.0",
     "@vitest/coverage-v8": "^3.2.4",
     "husky": "^9.1.7",
@@ -45,6 +46,6 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@mkvlrn/result": "^4.0.7"
+    "@mkvlrn/result": "^4.0.10"
   }
 }
