--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@biomejs/biome": "^2.1.3",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@mkvlrn/config": "^2.0.10",
+    "@mkvlrn/config": "^2.0.11",
     "@types/node": "^24.2.0",
     "@vitest/coverage-v8": "^3.2.4",
     "husky": "^9.1.7",
+    "lint-staged": "^16.1.4",
     "rollup-plugin-node-externals": "^8.0.1",
+    "tsc-files": "^1.1.4",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
     "vite": "^7.0.6",
@@ -46,6 +48,6 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@mkvlrn/result": "^4.0.10"
+    "@mkvlrn/result": "^4.0.11"
   }
 }
