--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "build": "vite build",
-    "dev": "tsx --watch src/main.ts",
+    "dev": "tsx --env-file-if-exists=.env --watch src/main.ts",
     "start": "node build/main.js",
     "test": "vitest",
     "biome-check": "biome check --no-errors-on-unmatched",
