--- a/package.json
+++ b/package.json
@@ -21,26 +21,26 @@
   },
   "scripts": {
     "build": "vite build",
-    "dev": "tsx --env-file-if-exists=.env --watch src/main.ts",
+    "dev": "tsx --watch src/main.ts",
     "start": "node build/main.js",
     "test": "vitest",
     "biome-check": "biome check --no-errors-on-unmatched",
-    "biome-fix": "npm run biome-check --write",
+    "biome-fix": "yarn biome-check --write",
     "typecheck": "tsc --noEmit",
     "prepare": "husky"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.0",
+    "@biomejs/biome": "^2.2.2",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@mkvlrn/config": "^2.0.14",
+    "@mkvlrn/config": "^2.0.15",
     "@types/node": "^24.3.0",
     "@vitest/coverage-v8": "^3.2.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
-    "rollup-plugin-node-externals": "^8.0.1",
+    "rollup-plugin-node-externals": "^8.1.0",
     "tsc-files": "^1.1.4",
-    "tsx": "^4.20.4",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vite": "^7.1.3",
     "vite-plugin-dts": "^4.5.4",
