--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node": "24.x"
   },
   "scripts": {
-    "build": "vite build",
+    "build": "rimraf build && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json -f",
     "dev": "tsx --watch src/main.ts",
     "start": "node build/main.js",
     "test": "vitest",
@@ -37,14 +37,12 @@
     "@types/node": "^24.3.0",
     "@vitest/coverage-v8": "^3.2.4",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.5",
-    "rollup-plugin-node-externals": "^8.1.0",
+    "lint-staged": "^16.1.6",
+    "rimraf": "^6.0.1",
+    "tsc-alias": "^1.8.16",
     "tsc-files": "^1.1.4",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
-    "vite": "^7.1.3",
-    "vite-plugin-dts": "^4.5.4",
-    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
